--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ default: &default
   encoding: unicode
   host: <%= ENV.fetch("DATABASE_HOST") { 'localhost' } %>
   port: <%= ENV.fetch("DATABASE_PORT") { 5432 } %>
-  database: <%= ENV.fetch("DATABASE_NAME") { 'yogomarcas_development' } %>
+  database: <%= ENV.fetch("DATABASE_NAME") { 'HealSync_development' } %>
   username: <%= ENV.fetch("DATABASE_USERNAME") { 'postgres' } %>
   password: <%= ENV.fetch("DATABASE_PASSWORD") { 'postgres' } %>
   pool: <%= (ENV.fetch("WEB_CONCURRENCY", 4).to_i * ENV.fetch("RAILS_MAX_THREADS", 10).to_i) %>
